src/objects/ISSP_FAQ2Case_Permissions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Holds Topic / Subtopic view Permissions according to Account Sector</description>
    <fields>
        <fullName>Sector_Permission__c</fullName>
        <label>Sector Permission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtopic__c</fullName>
        <label>Subtopic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ISSP FAQ2Case Permissions</label>
</CustomObject>